--- a/src/pages/archive/index.astro
+++ b/src/pages/archive/index.astro
@@ -67,7 +67,7 @@ const nextHref = currentPage < totalPages ? pageHref(currentPage + 1) : null;
                   <div class="flex items-center justify-between gap-4 py-3">
                     <a
                       class="underline-offset-4 underline transition hover:text-[#99F6E4] text-[#d6d6d6]"
-                      href={`/posts/${post.slug}`}
+                      href={`/posts/${post.data.url_title || post.slug}`}
                     >
                       {post.data.title}
                     </a>
