--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -158,7 +158,9 @@ const tabs = [
             Elahere@163.com
           </a>
           <span class="text-neutral-600">|</span>
-          <span>粤ICP备2022085367号</span>
+          <a href="https://beian.miit.gov.cn/" target="_blank"
+            >粤ICP备2022085367号</a
+          >
           <span class="text-neutral-600">|</span>
           <span class="text-neutral-400">Rendered by</span>
           <a
